# vtbox

./: .gitignore  Cargo.toml  Makefile  README.md  README.zh-CN.md
.github/workflows/: action.yml
transcribe/: .gitignore  Cargo.toml
transcribe/examples/: usage_example.rs
transcribe/src/: audio_parser.rs  model_handler.rs  transcriber.rs
vtbox/: Cargo.toml
vtbox/src/: main.rs  version.rs
vtbox/src/config/: conf.rs  data.rs  mod.rs
vtbox/src/logic/: about.rs  base.rs  message.rs  mod.rs  model.rs  ok_cancel_dialog.rs  setting.rs  util.rs  v2t.rs  window.rs
vtbox/src/util/: fs.rs  mod.rs  time.rs  translator.rs
vtbox/ui/: appwindow.slint  logic.slint  store.slint  theme.slint  translator.slint  util.slint
vtbox/ui/base/: avatar.slint  btn.slint
vtbox/ui/dialog/: about.slint  address-book-add-item.slint  address-book-qrcode.slint  address-book.slint  change-password.slint  help.slint  new-account.slint  password.slint  show-mnemonic.slint  tx-detail.slint
vtbox/ui/dialog/setting/: account.slint  dialog.slint  proxy.slint  ui.slint
vtbox/ui/panel/: footer.slint  header.slint  panel.slint
vtbox/ui/panel/bodyer/: balance.slint  model.slint  panel.slint  t2v.slint  v2t.slint
vtbox/ui/panel/bodyer/tool/: activity.slint  address-book.slint  panel.slint  receive.slint  send.slint
win/: version.h
