[package]
name = "vtbox"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
lazy_static = "1.4"
clipboard = "0.5"
platform-dirs = "0.3"
native-dialog = "0.6"

tokio = {version = "1.35", features = ["full"]}
uuid = { version = "1.6", features = ["v4"] }
slint = { version = "1.3", features = ["log"] }

transcribe = { path = "../transcribe" }

[build-dependencies]
slint-build = "1.3"
cmd_lib = "1.9"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2.4"

